deps/v8/test/message/fail/unexpected-identifier.out
# Copyright 2016 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

*%(basename)s:5: SyntaxError: Unexpected identifier 'bar'
foo bar
    ^^^
SyntaxError: Unexpected identifier 'bar'
